Prepared for multiple versionns

--- a/pom.xml
+++ b/pom.xml
@@ -36,14 +36,26 @@
                         </goals>
                         <configuration>
                             <packageLevelAnnotations>false</packageLevelAnnotations>
-                            <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
+                            <schemas>
+                                <schema>
+                                    <fileset>
+                                        <directory>${basedir}/src/main/resources</directory>
+                                        <includes>
+                                            <include>cruisev1.xsd</include>
+                                            <include>cruisev2.xsd</include>
+                                        </includes>
+                                        <excludes>
+                                            <exclude>*.*</exclude>
+                                        </excludes>
+                                    </fileset>
+                                </schema>
+                            </schemas>
                             <forceRegenerate>true</forceRegenerate>
                             <generateDirectory>${project.build.directory}/generated-sources/xjc</generateDirectory>
                             <verbose>true</verbose>
                             <bindingDirectory>${basedir}/src/main/bindings</bindingDirectory>
                             <episode>true</episode>
                             <extension>true</extension>
-                            <generatePackage>no.imr.nmd.commons.cruise.jaxb</generatePackage>
                             <args>
                                 <arg>-Xannotate</arg>
                                 <arg>-Xnamespace-prefix</arg>
