--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>no.imr.nmd.commons.cruise.jaxb</groupId>
     <artifactId>commons-cruise-jaxb</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Commons - Cruise JaxB</name>
     <repositories>
@@ -124,7 +124,7 @@
         <connection>scm:git:git@github.com:Institute-of-Marine-Research-NMD/commons-cruise-jaxb.git</connection>
         <url>scm:git:git@github.com:Institute-of-Marine-Research-NMD/commons-cruise-jaxb.git</url>
         <developerConnection>scm:git:git@github.com:Institute-of-Marine-Research-NMD/commons-cruise-jaxb.git</developerConnection>
-        <tag>commons-cruise-jaxb-1.0.5</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <repository>
