--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <packageLevelAnnotations>false</packageLevelAnnotations>
+                            <packageLevelAnnotations>true</packageLevelAnnotations>
                             <schemas>
                                 <schema>
                                     <fileset>
@@ -57,7 +57,6 @@
                             <args>
                                 <arg>-Xannotate</arg>
                                 <arg>-Xnamespace-prefix</arg>
-                                <arg>-npa</arg>
                             </args>
                         </configuration>
                     </execution>
